--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <h1>Cifrador Cesar.</h1>
-        <h2>Ejemplo Cloud</h2>
+        <!-- <h2>Ejemplo Cloud</h2> -->
         <form id="cifrador" autocomplete="off">
             <input id="input-original" spellcheck="false" placeholder="Ingrese el texto" type="text" name="text">
         </form>
